Update about.html with new contact email

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
             <p>We start by reviewing products we already own or borrow from friends because real‑world experience builds trust. We also reach out to local pro shops and rental stores to see if they will loan us items in exchange for exposure. Once our audience grows, we pitch manufacturers and distributors directly, highlighting how our targeted community of golfers offers value beyond raw traffic numbers. When appropriate, we purchase or rent new gear to review and recoup those costs through affiliate commissions and advertising.</p>
 
             <h2>Get Involved</h2>
-            <p>Are you a golf brand or PR representative looking to get your gear in front of passionate players? We’d love to hear from you. <a href="mailto:info@fairwaygearguide.com">Contact us</a> to discuss review opportunities, sponsorship packages or long‑term partnerships.</p>
+            <p>Are you a golf brand or PR representative looking to get your gear in front of passionate players? We’d love to hear from you. <a href="mailto:hamilde@me.com">Contact us</a> to discuss review opportunities, sponsorship packages or long‑term partnerships.</p>
         </article>
     </div>
     <footer>
