Add Course Reviews link to navigation
This commit updates index.html to include a navigation link to the new Pacific Northwest golf course reviews page.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <a href="posts/top-golf-drivers-2025.html">Drivers 2025</a>
         <a href="posts/essential-golf-accessories.html">Accessories</a>
         <a href="posts/golf-training-aids.html">Training Aids</a>
+            <a href="posts/pacific-northwest-golf-courses.html">Course Reviews</a>
+
     </nav>
     <header>
         <h1>Fairway Gear Guide</h1>
