Add About Me section and update contact info in about.html

--- a/about.html
+++ b/about.html
@@ -19,7 +19,10 @@
         <p>Our mission is to help golfers choose the right equipment and connect with brands.</p>
     </header>
     <div class="container">
-        <article>
+        <artile>>
+                    <h2>About Me</h2>
+        <p>Hi, I’m Derek, the founder of Fairway Gear Guide. I live in the Pacific Northwest and I’m obsessed with golf, travel, and BBQ. When I’m not testing new drivers or exploring local courses, I’m planning my next road trip or perfecting my brisket on the smoker. Feel free to reach out on X <a href="https://twitter.com/fwgearguide">@fwgearguide</a> or email me at <a href="mailto:hamilde@me.com">hamilde@me.com</a>.</p>
+
             <h2>Why We Exist</h2>
             <p>Golf equipment can be expensive and confusing. Fairway Gear Guide was created to provide clear, honest reviews of clubs, accessories and training aids so you can make informed decisions. We research the latest gear, test it on the course and use affiliate partnerships to fund our work.</p>
 
@@ -27,7 +30,8 @@
             <p>We start by reviewing products we already own or borrow from friends because real‑world experience builds trust. We also reach out to local pro shops and rental stores to see if they will loan us items in exchange for exposure. Once our audience grows, we pitch manufacturers and distributors directly, highlighting how our targeted community of golfers offers value beyond raw traffic numbers. When appropriate, we purchase or rent new gear to review and recoup those costs through affiliate commissions and advertising.</p>
 
             <h2>Get Involved</h2>
-            <p>Are you a golf brand or PR representative looking to get your gear in front of passionate players? We’d love to hear from you. <a href="mailto:hamilde@me.com">Contact us</a> to discuss review opportunities, sponsorship packages or long‑term partnerships.</p>
+                 <p>Are you a golf brand or PR representative looking to get your gear in front of passionate players? I’d love to hear from you. Reach out on X <a href="https://twitter.com/fwgearguide">@fwgearguide</a> or email me at <a href="mailto:hamilde@me.com">hamilde@me.com</a> to discuss review opportunities, sponsorship packages or long-term partnerships.</p>             
+
         </article>
     </div>
     <footer>
