Add hole 18 photo to about page

--- a/about.html
+++ b/about.html
@@ -32,7 +32,11 @@
             <h2>Get Involved</h2>
                  <p>Are you a golf brand or PR representative looking to get your gear in front of passionate players? I’d love to hear from you. Reach out on X <a href="https://twitter.com/fwgearguide">@fwgearguide</a> or email me at <a href="mailto:hamilde@me.com">hamilde@me.com</a> to discuss review opportunities, sponsorship packages or long-term partnerships.</p>             
 
-        </article>
+              <figure>
+            <img src="images/FullSizeRender.jpeg" alt="Hole 18, Meadowwood, Liberty Lake, WA">
+            <figcaption>Hole 18, Meadowwood, Liberty Lake, WA</figcaption>
+        </figure>
+ </article>
     </div>
     <footer>
         © 2025 Fairway Gear Guide.
